--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   hooks_riverpod: ^3.0.3
   iconsax_flutter: ^1.0.1
   dio: ^5.7.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
