--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   iconsax_flutter: ^1.0.1
   dio: ^5.7.0
   google_nav_bar: ^5.0.6
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
