--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^5.7.0
   google_nav_bar: ^5.0.6
   flutter_slidable: ^3.1.0
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
