--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   flutter_slidable: ^3.1.0
   font_awesome_flutter: ^10.12.0
+  go_router: ^16.3.0
 
 dev_dependencies:
   flutter_test:
