--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_slidable: ^3.1.0
   font_awesome_flutter: ^10.12.0
   go_router: ^16.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
